fix(i18n): refine French translations for accuracy and clarity

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -103,8 +103,8 @@
     "total_crypt": "Total Cartes de Crypte",
     "disciplines_sup_inf": "{{ count }} Supérieur | Inférieur",
     "total_library": "Total Cartes de Bibliothèque",
-    "total_pool_cost": "Coût total en pool",
-    "total_blood_cost": "Coût total en Sang",
+    "total_pool_cost": "Coût total de Réserve",
+    "total_blood_cost": "Coût total de Sang",
     "no_discipline": "Sans discipline",
     "rate_failed": "Une erreur est survenue lors de la notation du deck",
     "rate_success": "Merci pour votre note !!",
@@ -360,7 +360,7 @@
     "sect": "Secte",
     "title": "Titre",
     "blood_cost": "Coût en Sang",
-    "pool_cost": "Coût en pool",
+    "pool_cost": "Coût en Réserve",
     "taints": "Taints",
     "limited_format": "Format Limité",
     "card_text": "Texte de la carte",
@@ -541,41 +541,41 @@
   },
   "vtes": {
     "type": {
-      "master": "Maître",
+      "master": "Master",
       "conviction": "Conviction",
       "action": "Action",
-      "political": "Action Politique",
-      "power": "Pouvoir",
+      "political": "Politique",
+      "power": "Power",
       "equipment": "Équipement",
       "ally": "Allié",
-      "retainer": "Suivant",
-      "modifier": "Modificateur d'Action",
+      "retainer": "Compagnon",
+      "modifier": "Modificateur d'action",
       "combat": "Combat",
       "reaction": "Réaction",
-      "event": "Événement",
-      "trifle": "Triviale"
+      "event": "Event",
+      "trifle": "Trifle"
     },
     "discipline": {
       "abombwe": "Abombwe",
       "animalism": "Animalisme",
       "auspex": "Auspex",
       "celerity": "Célérité",
-      "chimerstry": "Chimérie",
+      "chimerstry": "Chimerstry",
       "daimoinon": "Daimoinon",
-      "dementation": "Démentation",
+      "dementation": "Dementation",
       "dominate": "Domination",
-      "fortitude": "Force d'Âme",
-      "maleficia": "Maléfice",
-      "melpominee": "Melpoménée",
+      "fortitude": "Force d'âme",
+      "maleficia": "Maleficia",
+      "melpominee": "Melpominee",
       "mytherceria": "Mytherceria",
-      "necromancy": "Nécromancie",
+      "necromancy": "Necromancy",
       "obeah": "Obeah",
       "obfuscate": "Occultation",
       "oblivion": "Oblivion",
-      "obtenebration": "Obténébration",
+      "obtenebration": "Obtenebration",
       "potence": "Puissance",
       "presence": "Présence",
-      "protean": "Protéisme",
+      "protean": "Protean",
       "quietus": "Quietus",
       "sanguinus": "Sanguinus",
       "serpentis": "Serpentis",
@@ -583,18 +583,18 @@
       "striga": "Striga",
       "temporis": "Temporis",
       "thanatosis": "Thanatosis",
-      "bloodsorcery": "Sorcellerie du Sang",
+      "bloodsorcery": "Sorcellerie du sang",
       "valeren": "Valeren",
       "vicissitude": "Vicissitude",
       "visceratika": "Visceratika",
-      "defense": "Défense",
+      "defense": "Defense",
       "innocence": "Innocence",
-      "judgment": "Jugement",
-      "martyrdom": "Martyre",
-      "redemption": "Rédemption",
+      "judgment": "Judgment",
+      "martyrdom": "Martyrdom",
+      "redemption": "Redemption",
       "vengeance": "Vengeance",
       "vision": "Vision",
-      "flight": "Vol"
+      "flight": "Flight"
     },
     "clan": {
       "abo": "Abomination",
@@ -602,23 +602,23 @@
       "akunanse": "Akunanse",
       "baali": "Baali",
       "banuhaqim": "Banu Haqim",
-      "bloodbrothers": "Frère de Sang",
+      "bloodbrothers": "Blood Brother",
       "brujah": "Brujah",
       "brujahanti": "Brujah antitribu",
       "caitiff": "Caitiff",
-      "daughters": "Fille de la Cacophonie",
+      "daughters": "Daughter of Cacophony",
       "gangrel": "Gangrel",
       "gangrelanti": "Gangrel antitribu",
-      "gargoyle": "Gargouille",
+      "gargoyle": "Gargoyle",
       "giovanni": "Giovanni",
       "guruhi": "Guruhi",
-      "harbingers": "Précurseur des Crânes",
+      "harbingers": "Harbinger of Skulls",
       "ishtarri": "Ishtarri",
       "kiasyd": "Kiasyd",
       "lasombra": "Lasombra",
       "malkavian": "Malkavien",
       "malkaviananti": "Malkavien antitribu",
-      "ministry": "Ministère",
+      "ministry": "Ministry",
       "nagaraja": "Nagaraja",
       "nosferatu": "Nosferatu",
       "nosferatuanti": "Nosferatu antitribu",
@@ -632,94 +632,94 @@
       "toreadoranti": "Toréador antitribu",
       "tremere": "Tremere",
       "tremereanti": "Tremere antitribu",
-      "truebrujah": "Vrai Brujah",
+      "truebrujah": "True Brujah",
       "tzimisce": "Tzimisce",
       "ventrue": "Ventrue",
       "ventrueanti": "Ventrue antitribu",
-      "visionary": "Visionnaire",
-      "avenger": "Vengeur",
-      "defender": "Défenseur",
+      "visionary": "Visionary",
+      "avenger": "Avenger",
+      "defender": "Defender",
       "innocent": "Innocent",
-      "judge": "Juge",
+      "judge": "Judge",
       "martyr": "Martyr",
-      "redeemer": "Rédempteur",
+      "redeemer": "Redeemer",
       "hecata": "Hecata"
     },
     "path": {
-      "caine": "Voie de Caïn",
-      "cathari": "Voie des Cathares",
-      "death": "Voie de la Mort et de l'Âme",
-      "power": "Voie du Pouvoir et de la Voix Intérieure"
+      "caine": "Caine",
+      "cathari": "Cathari",
+      "death": "Death and the Soul",
+      "power": "Power and the Inner Voice"
     },
     "tags": {
-      "ramp": "développement (ramp)",
-      "ally": "allié",
-      "bleed": "saignement (bleed)",
-      "block": "blocage",
+      "ramp": "ramp",
+      "ally": "ally",
+      "bleed": "bleed",
+      "block": "block",
       "combat": "combat",
-      "rush": "assaut (rush)",
-      "stealth": "discrétion",
-      "swarm": "nuée (swarm)",
+      "rush": "rush",
+      "stealth": "stealth",
+      "swarm": "swarm",
       "vote": "vote",
       "mmpa": "mmpa",
       "v5": "v5",
-      "2player": "2joueurs",
-      "advent2025": "avent2025"
+      "2player": "2player",
+      "advent2025": "advent2025"
     },
     "taints": {
-      "+Intercept": "+Interception",
-      "+Stealth": "+Discrétion",
-      "+Bleed": "+Saignement",
-      "+Strength": "+Force",
-      "+Hand Size": "+Taille de main",
-      "Titled": "Titré",
-      "Maneuver": "Manœuvre",
-      "Additional Strike": "Frappe additionnelle",
-      "Aggravated": "Aggravé",
-      "Prevent": "Prévention",
-      "Press": "Presse",
-      "Enter combat": "Engager le combat",
-      "Unlock": "Redresser",
-      "Black Hand": "Main Noire",
-      "Seraph": "Séraphin",
+      "+Intercept": "+Intercept",
+      "+Stealth": "+Stealth",
+      "+Bleed": "+Bleed",
+      "+Strength": "+Strength",
+      "+Hand Size": "+Hand Size",
+      "Titled": "Titled",
+      "Maneuver": "Maneuver",
+      "Additional Strike": "Additional Strike",
+      "Aggravated": "Aggravated",
+      "Prevent": "Prevent",
+      "Press": "Press",
+      "Enter combat": "Enter combat",
+      "Unlock": "Unlock",
+      "Black Hand": "Black Hand",
+      "Seraph": "Seraph",
       "Infernal": "Infernal",
-      "Red List": "Liste Rouge",
-      "Advanced": "Avancé",
-      "Banned": "Banni",
-      "Slave": "Esclave",
-      "Used by TWD": "Utilisé en TWD",
-      "Add Blood": "Ajouter du sang",
-      "+Intercept / -Stealth": "+Interception / -Discrétion",
-      "+Stealth / -Intercept": "+Discrétion / -Interception",
-      "+Votes / Title": "+Votes / Titre",
-      "Dodge": "Esquive",
-      "Combat Ends": "Fin du combat",
-      "Change target": "Changer de cible",
-      "Reduce a Bleed": "Réduire un saignement",
-      "Wake": "Réveil",
-      "Create vampire": "Créer un vampire",
-      "Burn Option": "brûlage",
-      "Reflex": "Réflexe",
+      "Red List": "Red List",
+      "Advanced": "Advanced",
+      "Banned": "Banned",
+      "Slave": "Slave",
+      "Used by TWD": "Used by TWD",
+      "Add Blood": "Add Blood",
+      "+Intercept / -Stealth": "+Intercept / -Stealth",
+      "+Stealth / -Intercept": "+Stealth / -Intercept",
+      "+Votes / Title": "+Votes / Title",
+      "Dodge": "Dodge",
+      "Combat Ends": "Combat Ends",
+      "Change target": "Change target",
+      "Reduce a Bleed": "Reduce a Bleed",
+      "Wake": "Wake",
+      "Create vampire": "Create vampire",
+      "Burn Option": "Burn Option",
+      "Reflex": "Reflex",
       "Multi-Type": "Multi-Type",
       "Multi-Discipline": "Multi-Discipline",
-      "Flight": "Vol",
-      "Sterile": "Stérile",
-      "Scarce": "Rare",
-      "Blood Cursed": "Sang maudit",
-      "Circle": "Cercle",
-      "Strike": "Frappe",
-      "Cannot Block": "Ne peut pas bloquer",
+      "Flight": "Flight",
+      "Sterile": "Sterile",
+      "Scarce": "Scarce",
+      "Blood Cursed": "Blood Cursed",
+      "Circle": "Circle",
+      "Strike": "Strike",
+      "Cannot Block": "Cannot Block",
       "Animal": "Animal",
-      "Changeling": "Changelin",
-      "Demon": "Démon",
-      "Dhampir": "Dhampire",
-      "Gargoyle": "Gargouille",
-      "Ghoul": "Goule",
+      "Changeling": "Changeling",
+      "Demon": "Demon",
+      "Dhampir": "Dhampir",
+      "Gargoyle": "Gargoyle",
+      "Ghoul": "Ghoul",
       "Mage": "Mage",
-      "Mortal": "Mortel",
-      "Mummy": "Momie",
-      "Werewolf": "Loup-garou",
-      "Wraith": "Apparition",
+      "Mortal": "Mortal",
+      "Mummy": "Mummy",
+      "Werewolf": "Werewolf",
+      "Wraith": "Wraith",
       "Zombie": "Zombie"
     },
     "warning": {
