feat(deck-filters): add dynamic deck name input based on deck type and update localization for 'name'

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -266,7 +266,7 @@
     "card_proportion_tooltip": "Customize Card Proportions",
     "custom": "Custom",
     "other_filters": "Other Filters",
-    "name": "Name",
+    "name": "Deck Name",
     "author": "Author",
     "card_text": "Card Text",
     "limited_format": "Limited Format",
