--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -266,7 +266,7 @@
     "card_proportion_tooltip": "Personalizar proporciones de cartas",
     "custom": "Personalizar",
     "other_filters": "Otros filtros",
-    "name": "Nombre",
+    "name": "Nombre del mazo",
     "author": "Autor",
     "card_text": "Texto de la carta",
     "limited_format": "Formato Limitado",
