--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -266,7 +266,7 @@
     "card_proportion_tooltip": "Personnaliser les proportions des cartes",
     "custom": "Personnalisé",
     "other_filters": "Autres filtres",
-    "name": "Nom",
+    "name": "Nom du deck",
     "author": "Auteur",
     "card_text": "Texte de la carte",
     "limited_format": "Format Limité",
