--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -267,7 +267,7 @@
     "card_proportion_tooltip": "Personalizar proporções de cartões",
     "custom": "Personalizar",
     "other_filters": "Outros filtros",
-    "name": "Nome",
+    "name": "Nome do baralho",
     "author": "Autor",
     "card_text": "Texto do cartão",
     "limited_format": "Formato Limitado",
