--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -121,7 +121,12 @@
     "edit_as_admin": "Editar (como Admin)",
     "similar_decks": "Baralhos Parecidos",
     "collection_tracker": "Rastreador de Coleção",
-    "estimated_value": "Valor Estimado"
+    "estimated_value": "Valor Estimado",
+    "sort_by_quantity": "Quantidade",
+    "sort_by_name": "Nome",
+    "sort_by_capacity": "Capacidade",
+    "sort_by_clan": "Clã",
+    "sort_by_group": "Grupo"
   },
   "deck_builder": {
     "deck_not_exists": "O baralho não existe. Tente novamente mais tarde.",
@@ -159,7 +164,12 @@
     "limited_format": "Formato Limitado",
     "deck_copied": "Baralho copiado para a área de transferência",
     "collection_tracker": "Rastreador de Coleção",
-    "validation_errors": "{{errors}}"
+    "validation_errors": "{{errors}}",
+    "sort_by_quantity": "Quantidade",
+    "sort_by_name": "Nome",
+    "sort_by_capacity": "Capacidade",
+    "sort_by_clan": "Clã",
+    "sort_by_group": "Grupo"
   },
   "deck_builder_service": {
     "min_crypt_cards": "Cripta deve ter pelo menos {{ minCrypt }} cartões",
