--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -321,7 +321,8 @@
     "notifications": "Notificaciones",
     "unread_notifications": "notificaciones no leídas",
     "proxy_generator": "Generador de Proxies",
-    "vtes_ai_chat": "Chat IA de VTES"
+    "vtes_ai_chat": "Chat IA de VTES",
+    "search": "Buscar"
   },
   "home": {
     "welcome_title": "Bienvenido a VTES Decks",
@@ -947,5 +948,15 @@
     "follow_tooltip": "Haz clic para seguir a este usuario y recibir notificaciones sobre sus nuevos mazos y actividades.",
     "unfollow_tooltip": "Estás siguiendo a este usuario. Haz clic para dejar de seguir.",
     "follow_error": "Algo salió mal con la acción de seguir"
+  },
+  "search_bar": {
+    "search_placeholder": "Buscar mazos, cartas, usuarios...",
+    "to_select": "para seleccionar",
+    "to_navigate": "para navegar",
+    "to_close": "para cerrar",
+    "no_results": "No se encontraron resultados",
+    "card_results": "Resultados de Cartas",
+    "deck_results": "Resultados de Mazos",
+    "user_results": "Resultados de Usuarios"
   }
 }
