--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -323,7 +323,8 @@
     "unread_notifications": "notificações não lidas",
     "whats_new": "Novidades {{ date }}",
     "proxy_generator": "Gerador de Proxies",
-    "vtes_ai_chat": "Chat IA de VTES"
+    "vtes_ai_chat": "Chat IA de VTES",
+    "search": "Pesquisar"
   },
   "home": {
     "welcome_title": "Bem-vindo ao VTES Decks",
@@ -947,5 +948,15 @@
     "follow_tooltip": "Clique para seguir este usuário e receber notificações sobre seus novos baralhos e atividades.",
     "unfollow_tooltip": "Você está seguindo este usuário. Clique para deixar de seguir.",
     "follow_error": "Algo deu errado com a ação de seguir"
+  },
+  "search_bar": {
+    "search_placeholder": "Pesquisar baralhos, usuários, cartas...",
+    "to_select": "para selecionar",
+    "to_navigate": "para navegar",
+    "to_close": "para fechar",
+    "no_results": "Nenhum resultado encontrado",
+    "card_results": "Resultados de Cartas",
+    "deck_results": "Resultados de Baralhos",
+    "user_results": "Resultados de Usuários"
   }
 }
